--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 main {
-    width: 65%;
+    width: 75%;
     margin: auto;
 }
 
@@ -42,6 +42,44 @@ main {
     vertical-align: middle;
 }
 
+.content-quizz {
+    font-size: 3em;
+    text-align: center;
+}
+
+.content-quizz h3,
+p {
+    margin: 0px;
+    margin-top: 5px;
+}
+
+.content-quizz #btn {
+    box-shadow: inset 0px 1px 0px 0px #fbafe3;
+    background: linear-gradient(to bottom, #ff5bb0 5%, #ef027d 100%);
+    background-color: #ff5bb0;
+    border-radius: 15px;
+    border: 1px solid #ee1eb5;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 9px 40px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #c70067;
+}
+
+.content-quizz #btn:hover {
+    background: linear-gradient(to bottom, #ef027d 5%, #ff5bb0 100%);
+    background-color: #ef027d;
+}
+
+.content-quizz #btn:active {
+    position: relative;
+    top: 1px;
+}
+
 .content p {
     font-size: 1.5em;
 }
@@ -64,7 +102,6 @@ img {
     width: 40em;
 }
 
-.lessHeight
-{
-	height: 700px;
+.lessHeight {
+    height: 700px;
 }
